feat login Test commit

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: VuePro
   datasource:
     druid:
-      url: jdbc:mysql://localhost:3306/activiti?createDatabaseIfNotExist\=true&useUnicode\=true&characterEncoding\=utf8
+      url: jdbc:mysql://localhost:3306/vue?createDatabaseIfNotExist\=true&useUnicode\=true&characterEncoding\=utf8
       username: root
       password: 123456
       driver-class-name: com.mysql.jdbc.Driver
@@ -17,3 +17,6 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQLDialect
         current_session_context_class: org.springframework.orm.hibernate4.SpringSessionContext
+mybatis:
+  config-location: classpath:mybatis/mybatis-config.xml
+  mapper-locations: classpath:mybatis/mapper/*.xml
